<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="10dp">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newFeatureDescription1" 
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView

            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_google_map_marker_no_color" />
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/newFeatureDescription0" />


    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            
      <ImageView
        
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_google_map_marker2" />     
		<TextView
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/newFeatureDescription2" />
   
        
    </LinearLayout>
    
        <LinearLayout 
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            
      <ImageView
        
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_google_map_marker" />     
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/newFeatureDescription3" />
   
        
    </LinearLayout>
    
</LinearLayout>
